[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_openei"
version = "0.3.0"
description = "Python wrapper for OpenEI HTTP API"
readme = "README.md"
authors = [
    { name = "firstof9", email = "firstof9@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "aiofiles",
    "aiohttp",
    "requests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/firstof9/python-openei"

[tool.setuptools.packages.find]
exclude = ["test*", "tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "LOG",    # flake8-logging
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-docstring-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"openeihttp/*" = ["S101"]
"tests/*" = ["D", "S101", "E501", "SIM117"]

[tool.ruff.format]
